Correct file alignment; slider for images implemented.

--- a/staticfiles/stylesheets/base.css
+++ b/staticfiles/stylesheets/base.css
@@ -55,9 +55,30 @@ body {
 		padding: 0 24px;
 	}
 
-	.file-image {
-		margin: 0px auto;
+	.file-image + .file-info {
+		display: none;
 	}
+
+	.file-image {
+		position: relative;
+	}
+
+		.file-image img {
+			margin: 0 auto;
+			max-width: 700px;
+			display: block;
+		}
+
+		.file-info-button {
+			position: absolute;
+			top: 0;
+			right: 0;
+			display: none;
+		}
+
+		.file-image:hover .file-info-button {
+			display: block;
+		}
 
 .annotation {
 	margin: 60px 0;
